--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Benefits</a></li>
-								<li><a href="#work">Music as a Tool</a></li>
-								<li><a href="#about">Why Music?</a></li>
-								<li><a href="#contact">Role of Educators</a></li>
-								<li><a href="#elements">References</a></li>
+								<li><a href="#benefits">Benefits</a></li>
+								<li><a href="#music">Music as a Tool</a></li>
+								<li><a href="#whymusic">Why Music?</a></li>
+								<li><a href="#role">Role of Educators</a></li>
+								<li><a href="#references">References</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -43,8 +43,8 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
+						<!-- Benefits -->
+							<article id="benefits">
 								<h2 class="major" style="width: 100%;">The benefits for the children to learn other languages</h2>
 								<span class="image main">
 									<img src="images/pic01.jpg" alt="Figure 1" />
@@ -97,8 +97,8 @@
 								</ul>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
+						<!-- Music -->
+							<article id="music">
 								<h2 class="major" style="width: 100%;">Music as a tool for language learning</h2>
 								<span class="image main">
 									<img src="images/pic02.jpg" alt="Music" />
@@ -133,8 +133,8 @@
 								Featherstone, 2008; Salmon, 2010).</p>
 							</article>
 
-						<!-- About -->
-							<article id="about">
+						<!-- Why Music -->
+							<article id="whymusic">
 								<h2 class="major" style="width: 100%;">Why Music?</h2>
 								<span class="image main">
 									<img src="images/pic03.jpg" alt="Figure 2" />
@@ -153,7 +153,7 @@
 										characters which unique according the cultural background.
 									</li>
 									<li>
-										<strong>A song can enhance language recall</strong><br>
+										<strong>A music can enhance language recall</strong><br>
 										According to the research conducted by Good, Russo &amp; Sullivan (2014), rhythm and a melodic component of the song
 										could enhance children’s recall ability of the foreign text and vocabulary. The educators are commonly using a song in
 										some group time learning to support encoding and retrieval information such as the song “head shoulder knees and
@@ -185,8 +185,8 @@
 								</ol>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact">
+						<!-- Role -->
+							<article id="role">
 								<h2 class="major" style="width: 100%;">The role of the early childhood professional</h2>
 								<span class="image main">
 									<img src="images/pic04.jpg" alt="Figure 4" />
@@ -220,8 +220,8 @@
 								be able to success in foreign language learning.</p>
 							</article>
 
-						<!-- Elements -->
-							<article id="elements">
+						<!-- References -->
+							<article id="references">
 								<h2 class="major" style="width: 100%;">References</h2>
 								<p>Bialystok, E. (2006). Second-Language Acquisition and Bilingualism at an Early Age and the Impact on
 								Early Cognitive Development. Retrieved from http://www.child-
