--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
+						<p class="copyright">Language and Literacies in Early Childhood</p>
 					</footer>
 
 			</div>
