--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
 								https://ebookcentral.proquest.com/lib/rmit/reader.action?docID=895031&ppg=42</p>
 								<p>Peal, E., & Lambert, W. (1962). The relation of bilingualism to intelligence. Psychological Monographs: General And
 								Applied, 76(27), 1-23. doi: http://dx.doi.org/10.1037/h0093840</p>
+								<p>Salmon, A. (2010). Using music to promote children's thinking and enhance their literacy development. Early Child
+								Development And Care, 180(7), 937-945. doi: 10.1080/03004430802550755</p>
 								<p>The NSW Department of Education. (2019). Early childhood teachers [Website image]. Retrieved from
 								https://www.teach.nsw.edu.au/exploreteaching/types-of-teachers/early-childhood-teachers</p>
 								<p>Thompson, P., Giedd, J., Woods, R., MacDonald, D., Evans, A., & Toga, A. (2000). Growth patterns in the developing brain
